# PictureToBurn

./: .copier-answers.yml  .gitignore  README.md  profile.sh  pyproject.toml  requirements.txt  setup.py  twitter_creds.dist.json
.devcontainer/: Dockerfile  devcontainer.json
picture_to_burn/: __init__.py  browser.py  cli.py  ffmpeg.py  twitter.py  twitter_helper.py
