[tool.poetry]
name = "picture-to-burn"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.4.0"
selenium = "^4.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pylint = "^2.15.5"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_gif = 'picture_to_burn.cli:main'
